--- a/DemoTest/src/main/AndroidManifest.xml
+++ b/DemoTest/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
         <activity
             android:name=".PreviewActivity"
-            android:screenOrientation="landscape">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -15,7 +15,7 @@
         </activity>
         <activity
             android:name=".ContentActivity"
-            android:screenOrientation="landscape">
+            android:screenOrientation="portrait">
         </activity>
     </application>
 </manifest>
